--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Page Title</title>
-  <link rel="stylesheet" type="text/css" href="main.css" />
+  <title>Bus Mall</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
+  <section id="nav">
+    <nav>
+      <img src="http://placehold.it/200x100/000000" />
+      <ul>
+        <li><a href="index.html">Nav 1</a></li>
+        <li><a href="index.html">Nav 2</a></li>
+        <li><a href="index.html">Nav 3</a></li>
+        <li><a href="index.html">Nav 4</a></li>
+      </ul>
+    </nav>
+  </section>
+  <section id="main-text">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa ab iure architecto, perferendis adipisci et repellendus laboriosam totam, tempore placeat necessitatibus? Iusto eligendi nisi soluta quas deleniti tenetur odit unde.</p>
+  </section>
+  <section id="main-images">
+      <img src="http://placehold.it/300x300/000000" />
+      <img src="http://placehold.it/300x300/000000" />
+      <img src="http://placehold.it/300x300/000000" />
+  </section>
+  <section id="footer">
+    <footer></footer>
+  </section>
   <script src="app.js"></script>
 </body>
 
