added asset imgs

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
       <img src="http://placehold.it/200x100/000000" />
       <ul>
-        <li><a href="index.html">Nav 1</a></li>
-        <li><a href="index.html">Nav 2</a></li>
-        <li><a href="index.html">Nav 3</a></li>
+        <li><a href="index.html" id="img-one">Nav 1</a></li>
+        <li><a href="index.html" id="img-two">Nav 2</a></li>
+        <li><a href="index.html" id="img-three">Nav 3</a></li>
         <li><a href="index.html">Nav 4</a></li>
       </ul>
     </nav>
