added some js to start off

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
       <img src="http://placehold.it/200x100/000000" />
       <ul>
-        <li><a href="index.html" id="img-one">Nav 1</a></li>
-        <li><a href="index.html" id="img-two">Nav 2</a></li>
-        <li><a href="index.html" id="img-three">Nav 3</a></li>
+        <li><a href="index.html">Nav 1</a></li>
+        <li><a href="index.html">Nav 2</a></li>
+        <li><a href="index.html">Nav 3</a></li>
         <li><a href="index.html">Nav 4</a></li>
       </ul>
     </nav>
@@ -23,9 +23,14 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa ab iure architecto, perferendis adipisci et repellendus laboriosam totam, tempore placeat necessitatibus? Iusto eligendi nisi soluta quas deleniti tenetur odit unde.</p>
   </section>
   <section id="main-images">
-      <img src="http://placehold.it/300x300/000000" />
-      <img src="http://placehold.it/300x300/000000" />
-      <img src="http://placehold.it/300x300/000000" />
+      <img src="" id="image-one" />
+      <img src="" id="image-two"/>
+      <img src="" id="image-three"/>
+  </section>
+  <section id="main-images-test">
+      <img src="images/bag.jpg" />
+      <img src="images/banana.jpg" />
+      <img src="images/breakfast.jpg" />
   </section>
   <section id="footer">
     <footer></footer>
