converted everything into a for loop to make code more DRY

--- a/index.html
+++ b/index.html
@@ -23,14 +23,9 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa ab iure architecto, perferendis adipisci et repellendus laboriosam totam, tempore placeat necessitatibus? Iusto eligendi nisi soluta quas deleniti tenetur odit unde.</p>
   </section>
   <section id="main-images">
-      <img src="" id="image-one" />
-      <img src="" id="image-two"/>
-      <img src="" id="image-three"/>
-  </section>
-  <section id="main-images-test">
-      <img src="images/bag.jpg" />
-      <img src="images/banana.jpg" />
-      <img src="images/breakfast.jpg" />
+      <img src="" id="image-1" />
+      <img src="" id="image-2"/>
+      <img src="" id="image-3"/>
   </section>
   <section id="footer">
     <footer></footer>
