creating li in html through DOM maniuplation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <img src="" id="image-2"/>
       <img src="" id="image-3"/>
   </section>
+  <section id="data">
+    
+  </section>
   <section id="footer">
     <footer></footer>
   </section>
