basic charts generating

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>Bus Mall</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <script type= "text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 </head>
 
 <body>
@@ -28,7 +29,8 @@
       <img src="" id="image-3"/>
   </section>
   <section id="data">
-    
+  <canvas id="chart1"></canvas>
+  <canvas id="chart2"></canvas>
   </section>
   <section id="footer">
     <footer></footer>
