--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <section id="nav">
     <nav>
-      <img src="http://placehold.it/200x100/000000" />
+      <img src="images/bus-logo.png" />
       <ul>
         <li>
           <a href="index.html">Nav 1</a>
