--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <img src="images/bus-logo.png" />
       <ul>
         <li>
-          <a href="index.html">Nav 1</a>
+          <a href="index.html">About Us</a>
         </li>
         <li>
-          <a href="index.html">Nav 2</a>
+          <a href="index.html">Products</a>
         </li>
         <li>
-          <a href="index.html">Nav 3</a>
+          <a href="index.html">Where we Serve</a>
         </li>
         <li>
-          <a href="index.html">Nav 4</a>
+          <a href="index.html">Admin</a>
         </li>
       </ul>
     </nav>
