--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <img src="images/bus-logo.png" />
       <ul>
         <li>
-          <a href="index.html">About Us</a>
+          <a href="#">About Us</a>
         </li>
         <li>
-          <a href="index.html">Products</a>
+          <a href="#">Products</a>
         </li>
         <li>
-          <a href="index.html">Where we Serve</a>
+          <a href="#">Where we Serve</a>
         </li>
         <li>
-          <a href="index.html">Admin</a>
+          <a href="#">Admin</a>
         </li>
       </ul>
     </nav>
